--- a/src/App.scss
+++ b/src/App.scss
@@ -66,8 +66,8 @@ a {
     font-family: 'Syne-Variable', sans-serif;
     font-weight: bold;
 
-    font-size: vw(59);
-    line-height: vw(71);
+    font-size: vh(59);
+    line-height: vh(71);
 
     padding-left: vw(30);
 
